--- a/templates/wild/show.html.twig
+++ b/templates/wild/show.html.twig
@@ -1,4 +1,4 @@
-{# templates/wild/show.html.twig #}
+
 {% extends 'base.html.twig' %}
 {% block title %}{{ slug }}{% endblock %}
 
@@ -10,6 +10,9 @@
             <h1 class="mt-0">{{ program.title }}</h1>
             <p>{{ program.summary }}</p>
             <p>Categorie : {{ program.category.name }}</p>
+            <a href="{{ path('show_programs', {id: program.id}) }}">
+                Voir les saisons
+            </a>
         </div>
     </div>
 
