--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,11 +2,19 @@
 
 {% block body %}
 <h1> {{ bienvenue }}</h1>
-    <a href="{{ path('wild_show', { 'slug': "walking-dead" }) }}">
-        Testing show() method from WildController with a real program s slug.
-    </a>
+    <a href="{{ path('show_program', { 'programName': "walking-dead" }) }}">Walking dead</a>
+    <br>
+    <a href="{{ path('show_program', { 'programName': "the-haunting-of-hill-house" }) }}">The Hauting of Hill House</a>
+    <br>
+    <a href="{{ path('show_program', { 'programName': "american-horror-story" }) }}">American Horror Story</a>
+    <br>
+    <a href="{{ path('show_program', { 'programName': "love-death-and-robots" }) }}">Love Death And Robots</a>
+    <br>
+    <a href="{{ path('show_program', { 'programName': "penny-dreadful" }) }}">Penny Dreadful</a>
+    <br>
+    <a href="{{ path('show_program', { 'programName': "fear-the-walking-dead" }) }}">Fear The Walkind Dead</a>
     <br>
     <a href="{{ path('wild_index') }}">
-        Testing index() method from WildController to view all programs.
+        Toutes les séries !
     </a>
 {% endblock %}
