--- a/templates/wild/episodes.html.twig
+++ b/templates/wild/episodes.html.twig
@@ -5,14 +5,15 @@
     </div>
 
     {% for episode in episodes %}
-        <div class="list-group  mt-3">
-        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+        <div class="contain d-flex justify-content-center">
+        <div class="list-group w-50 mt-3">
+        <a href="{{ path('episode_show', { 'id': episode.id }) }}" class="list-group-item list-group-item-action flex-column align-items-center">
             <div class="d-flex w-100 justify-content-between">
                 <h5 class="mb-1 text-primary">{{ episode.title}}</h5>
                 <small class="text-warning">Episode {{ episode.number }}</small>
             </div>
-            <p class="mb-1">{{ episode.synopsis }}</p>
         </a>
+        </div>
         </div>
     {% endfor %}
 
