--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,16 +1,20 @@
 $theme-colors: (
         "primary": #45858C,
         "danger": #A0D9D9,
-        "warning":#D9B166
-);
+        "warning":#D9B166,
+        "sucess": #D3D3D3,
 
+);
+$grey: #D3D3D3;
 body {
-   background-color: lightgrey !important;
+   background-color: $grey!important;
 }
 .align-self-start.mr-3.poster {
     width: 300px;
 }
-
+div.form-control {
+ background-color: lightgrey !important;
+}
 
 
 @import "~bootstrap/scss/bootstrap";
