--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1> {{ bienvenue }}</h1>
+<h1 class="text-center bg-warning mt-3"> {{ bienvenue }}</h1>
     <a href="{{ path('show_program', { id: 1 }) }}">Walking dead</a>
     <br>
     <a href="{{ path('show_program', { id: 2 }) }}">The Hauting of Hill House</a>
