--- a/templates/category/add.html.twig
+++ b/templates/category/add.html.twig
@@ -1,10 +1,31 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container w-50 mt-3">
+    <h2 class="text-center bg-warning mt-3"> Ajout d'une catégorie</h2>
+    {% if message is defined and message is not empty %}
+        <div aria-live="polite" aria-atomic="true" style="position: relative; min-height: 200px;">
+        <div style="position: absolute; top: 0; right: 0; margin-right: 10px;">
+        <div class="toast" id="element" role="alert" aria-live="assertive" aria-atomic="true" data-autohide=false>
+            <div class="toast-header">
+                <strong class="mr-auto">Notification</strong>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="toast-body font-weight-bold">
+                {{message}}
+            </div>
+        </div>
+        </div>
+        </div>
+    {% endif %}
+    <div class="container w-50 mt-3 d-flex align-items-center">
+        <div class="form-control">
     {{ form_start(form) }}
+
     {{ form_row(form.name) }}
     <button class="btn bg-warning">{{ button_label|default('Save') }}</button>
     {{ form_end(form) }}
+        </div>
     </div>
 {% endblock %}
