--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -5,10 +5,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="/wild">Wild <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Features</a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
-            <a class="nav-item nav-link disabled" href="#">Disabled</a>
+            <a class="nav-item nav-link active font-weight-bold" href="/wild">Wild <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('program_index') }}">Séries</a>
+            <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('season_index') }}">Saisons</a>
+            <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('season_index') }}">Episodes</a>
         </div>
     </div>
 </nav>
