--- a/templates/wild/index.html.twig
+++ b/templates/wild/index.html.twig
@@ -2,7 +2,7 @@
 {% block title %}All programs{% endblock %}
 {% form_theme form 'foundation_5_layout.html.twig' %}
 {% block body %}
-    <h1 class="text-center bg-warning">Toutes les séries</h1>
+    <h1 class="text-center bg-warning mt-3">Toutes les séries</h1>
     <div class="container-form p-2">
 <div class="form-group p-2">
      {{ form_start(form) }}
