--- a/templates/wild/episodes.html.twig
+++ b/templates/wild/episodes.html.twig
@@ -7,7 +7,7 @@
     {% for episode in episodes %}
         <div class="contain d-flex justify-content-center">
         <div class="list-group w-50 mt-3">
-        <a href="{{ path('episode_show', { 'id': episode.id }) }}" class="list-group-item list-group-item-action flex-column align-items-center">
+        <a href="{{ path('show_episode', { 'id': episode.id }) }}" class="list-group-item list-group-item-action flex-column align-items-center">
             <div class="d-flex w-100 justify-content-between">
                 <h5 class="mb-1 text-primary">{{ episode.title}}</h5>
                 <small class="text-warning">Episode {{ episode.number }}</small>
