--- a/templates/episode/edit.html.twig
+++ b/templates/episode/edit.html.twig
@@ -3,11 +3,13 @@
 {% block title %}Edit Episode{% endblock %}
 
 {% block body %}
-    <h1>Edit Episode</h1>
-
-    {{ include('episode/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('episode_index') }}">back to list</a>
+    <h1 class="bg-warning text-center mt-3">Edit Episode</h1>
+<div class="container m-auto d-flex justify-content-center w-80">
+    {{ include('episode/_form.html.twig') }}
+</div>
+    <div class="d-flex justify-content-end">
+        <a class=" btn bg-primary text-white mr-2" href="{{ path('episode_index') }}">Retour à la liste</a>
 
     {{ include('episode/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
