--- a/templates/program/edit.html.twig
+++ b/templates/program/edit.html.twig
@@ -4,10 +4,12 @@
 
 {% block body %}
     <h1 class="bg-warning text-center mt-3">Éditer un Programme</h1>
-
-    {{ include('program/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('program_index') }}">back to list</a>
+<div class="container m-auto d-flex justify-content-center w-80">
+    {{ include('program/_form.html.twig') }}
+</div>
+<div class="d-flex justify-content-end">
+    <a class="btn bg-primary mr-2" href="{{ path('program_index') }}">Retour à la liste</a>
 
     {{ include('program/_delete_form.html.twig') }}
+</div>
 {% endblock %}
