--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -14,6 +14,10 @@
     <br>
     <a href="{{ path('show_program', { id: 6 }) }}">Fear The Walkind Dead</a>
     <br>
+    <a href="{{ path('show_program', { id: 7 }) }}">Brooklyn nine-nine</a>
+    <br>
+    <a href="{{ path('show_program', { id: 8 }) }}">Derry Girls</a>
+    <br>
     <a href="{{ path('wild_index') }}">
         Toutes les séries !
     </a>
