--- a/templates/season/edit.html.twig
+++ b/templates/season/edit.html.twig
@@ -4,10 +4,10 @@
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 {% block body %}
     <h1 class="bg-warning text-center mt-3">Éditer une saison</h1>
-<div class="container m-auto d-flex justify-content-center w-80">
+<div class="container">
     {{ include('season/_form.html.twig') }}
 </div>
-<div class="d-flex justify-content-end">
+<div class=" container d-flex justify-content-center">
     <a class="btn bg-primary mr-2" href="{{ path('season_index') }}">Retour à la liste</a>
 
     {{ include('season/_delete_form.html.twig') }}
