--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -41,3 +41,16 @@ th {
 .invalid-feedback {
   color: black !important;
 }
+
+.container-image {
+   img {
+     max-height: 500px;
+   }
+ }
+.font-size {
+  font-size: 20px;
+}
+
+li {
+  list-style-type: none;
+}
