--- a/templates/wild/program.html.twig
+++ b/templates/wild/program.html.twig
@@ -7,12 +7,23 @@
         <p>{{ program.summary }}</p>
         <img class="align-self-start mr-3 poster" src="{{program.poster}}" alt="{{ program.title }} poster">
     </div>
-    <div class="p-5">
+    <div class="p-5 mt-3">
         <h2 class="text-warning"> Saisons</h2>
         {% for season in seasons %}
-        <a href="{{ path('show_season', {id: season.id}) }}" > Saison {{ season.number }} </a>
+        <a  class="font-size" href="{{ path('show_season', {id: season.id}) }}" > Saison {{ season.number }} </a>
             <p class="text-justify"> {{ season.description }}</p>
         {% endfor %}
+        <div class="actors d-flex justify-content-center">
+            <ul>
+                <h4 class="text-center text-warning"> Acteur(s) :</h4>
+                {% for actor in program.actors %}
+                    <a href="{{ path('actor_id', {id: actor.id} ) }}"> <li class="text-dark">{{ actor.name }}</li> </a>
+                {% else %}
+                    <li>Aucun acteur pour cette série</li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
+
 </div>
 {% endblock %}
