--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -22,8 +22,8 @@
                 <td>{{ episode.number }}</td>
                 <td>{{ episode.synopsis }}</td>
                 <td>
-                    <a class="btn bg-warning"  href="{{ path('episode_show', {'id': episode.id}) }}">Voir</a>
-                    <a class="btn bg-primary text-white mt-1" href="{{ path('episode_edit', {'id': episode.id}) }}">Edit</a>
+                    <a class="btn bg-warning"  href="{{ path('episode_show', {'slug': episode.slug}) }}">Voir</a>
+                    <a class="btn bg-primary text-white mt-1" href="{{ path('episode_edit', {'slug': episode.slug}) }}">Edit</a>
                 </td>
             </tr>
         {% else %}
