--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -28,8 +28,8 @@
                 <td>{{ program.country }}</td>
                 <td>{{ program.year }}</td>
                 <td>
-                    <a class="btn bg-warning"  href="{{ path('program_show', {'id': program.id}) }}">Voir</a>
-                    <a class="btn bg-primary text-white mt-1" href="{{ path('program_edit', {'id': program.id}) }}">Edit</a>
+                    <a class="btn bg-warning"  href="{{ path('program_show', {'slug': program.slug}) }}">Voir</a>
+                    <a class="btn bg-primary text-white mt-1" href="{{ path('program_edit', {'slug': program.slug}) }}">Edit</a>
                 </td>
             </tr>
         {% else %}
