--- a/templates/actor/index.html.twig
+++ b/templates/actor/index.html.twig
@@ -3,27 +3,25 @@
 {% block title %}Actor index{% endblock %}
 
 {% block body %}
-    <h1>Actor index</h1>
-<div>
+<h1 class="bg-warning text-center mt-3">Actor index</h1>
+<div class="container m-auto d-flex justify-content-center">
     <div class="button-s text-right">
         <a class="btn btn-danger" href="{{ path('actor_new') }}">Créez un nouveau</a>
     </div>
-    <table class="table">
+    <table class="table table-hover mt-3 ">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>actions</th>
+                <th>Nom</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for actor in actors %}
             <tr>
-                <td>{{ actor.id }}</td>
-                <td>{{ actor.name }}</td>
+                <td><strong>{{ actor.name }}</strong></td>
                 <td>
-                    <a href="{{ path('actor_show', {'slug': actor.slug}) }}">show</a>
-                    <a href="{{ path('actor_edit', {'slug': actor.slug}) }}">edit</a>
+                    <a class="btn bg-warning" href="{{ path('actor_show', {'slug': actor.slug}) }}">show</a>
+                    <a class="btn bg-primary text-white mt-1" href="{{ path('actor_edit', {'slug': actor.slug}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -33,6 +31,6 @@
         {% endfor %}
         </tbody>
     </table>
-
+    </div>
 
 {% endblock %}
