--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -11,5 +11,12 @@
             <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('episode_index') }}">Episodes</a>
             <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('actor_index') }}">Acteurs</a>
         </div>
+            {% if app.user %}
+                <div class="nav navbar-nav">
+               <a class=" nav-link text-white font-weight-bold" href="{{ path('app_logout') }}"> Se déconnecter</a>
+                </div>
+            {% else %}
+                <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('app_login') }}"> Se connecter</a>
+            {% endif %}
     </div>
 </nav>
