--- a/templates/wild/program.html.twig
+++ b/templates/wild/program.html.twig
@@ -6,6 +6,11 @@
         <h2 class="mt-3 text-warning">{{ program.title }}</h2>
         <p>{{ program.summary }}</p>
         <img class="align-self-start mr-3 poster" src="{{program.poster}}" alt="{{ program.title }} poster">
+        <div class="ml-3 mt-3">
+        {% if is_granted('ROLE_ADMIN') %}
+            <a class="btn bg-warning" href="{{ path('program_edit', { 'slug': program.slug} ) }}">Éditer</a>
+        {%endif%}
+        </div>
     </div>
     <div class="p-5 mt-3">
         <h2 class="text-warning"> Saisons</h2>
