--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -4,6 +4,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        {% if is_granted('ROLE_ADMIN') %}
         <div class="navbar-nav">
             <a class="nav-item nav-link active font-weight-bold" href="/wild">Wild <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('program_index') }}">Séries</a>
@@ -11,6 +12,7 @@
             <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('episode_index') }}">Episodes</a>
             <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('actor_index') }}">Acteurs</a>
         </div>
+        {% endif %}
             {% if app.user %}
                 <div class="nav navbar-nav">
                <a class=" nav-link text-white font-weight-bold" href="{{ path('app_logout') }}"> Se déconnecter</a>
