what a horrible quest

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -55,3 +55,16 @@ li {
   list-style-type: none;
 }
 
+a.watchlist:hover {
+  color: #45858C;
+}
+
+a.active:hover {
+  color: red;
+}
+.active {
+  color: red;
+    }
+
+
+
