--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -3,7 +3,11 @@
 {% block title %}Program{% endblock %}
 
 {% block body %}
-    <h1 class="bg-warning text-center mt-3">{{ program.title }}</h1>
+    <div>
+    <h1 class="bg-warning text-center mt-3">{{ program.title }} <a id="watchlist" href="#"  data-href={{ path('program_watchlist', {'id': program.id}) }} class="watchlist {{ app.user.isInWatchlist(program) ? 'active' : '' }}">
+            <i  class="far fa-heart"></i>
+        </a></h1>
+    </div>
     <div class="container d-flex justify-content-center w-50">
         <table class="table mt-5">
             <tbody>
@@ -51,3 +55,8 @@
         {{ include('program/_delete_form.html.twig') }}
     </div>
 {% endblock %}
+
+ {% block javascripts %}
+     {{ parent() }}
+     {{ encore_entry_script_tags('watch') }}
+ {% endblock %}
