--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -5,7 +5,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active font-weight-bold" href="/wild">Wild <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link font-weight-bold" href="/wild">Wild</a>
             <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('program_index') }}">Séries</a>
             <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('season_index') }}">Saisons</a>
             <a class="nav-item nav-link text-white font-weight-bold" href="{{ path('episode_index') }}">Episodes</a>
