--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -6,6 +6,7 @@
     <div class="container m-auto d-flex justify-content-center">
      <!--   {{ app.session.get('total') }}  -->
         <div>
+            <i class="fas fa-star"></i>
         <div class="button-s text-right">
         <a class="btn btn-danger" href="{{ path('program_new') }}">Créez un nouveau</a>
         </div>
@@ -18,6 +19,7 @@
                 <th>Pays</th>
                 <th>Année</th>
                 <th>Acteurs</th>
+                <th>Favoris</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -37,6 +39,9 @@
                     Aucun acteur pour cette série
                 {% endfor %}
                 </td>
+                <td> <a id="watchlist" href="#"  data-href={{path('program_watchlist', {'id': program.id})}} class="watchlist {{ app.user.isInWatchlist(program) ? 'active' : '' }}">
+                        <i  class="far fa-heart"></i>
+                    </a> </td>
                 <td>
                     <a class="btn bg-warning"  href="{{ path('program_show', {'slug': program.slug}) }}">Voir</a>
                     <a class="btn bg-primary text-white mt-1" href="{{ path('program_edit', {'slug': program.slug}) }}">Edit</a>
@@ -52,3 +57,7 @@
         </div>
     </div>
 {% endblock %}
+ {% block javascripts %}
+     {{ parent() }}
+     {{ encore_entry_script_tags('watch') }}
+ {% endblock %}
