--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -34,7 +34,7 @@
             </tbody>
         </table>
         <div class="d-flex align-items-center photo">
-            <img class="index show" src="{{ program.poster }}" alt="photo of serie">
+            <img src="{{ vich_uploader_asset(program) }}" alt="Toto">
         </div>
     </div>
     <h4 class="text-center"> Acteur(s) :</h4>
