--- a/templates/wild/program.html.twig
+++ b/templates/wild/program.html.twig
@@ -5,7 +5,7 @@
     <div class="p-3">
         <h2 class="mt-3 text-warning">{{ program.title }}</h2>
         <p>{{ program.summary }}</p>
-        <img class="align-self-start mr-3 poster" src="{{program.poster}}" alt="{{ program.title }} poster">
+        <img class="align-self-start mr-3 poster" src="{{ vich_uploader_asset(program) }}" alt="Toto">
     </div>
     <div class="p-5 mt-3">
         <h2 class="text-warning"> Saisons</h2>
